fixed absolute path

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ title: Your New Jekyll Site
   <footer>
 	<ul class="small">
 		<li>
-			<a href="{{post.url}}" title="{{post.date}}">
+			<a href="{{site.url}}{{post.url}}" title="{{post.date}}">
 			{{ post.date | date: "%B %d, %Y" }}</a>
 		</li>
 	</ul>
