--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@ title: Your New Jekyll Site
 <div class='pagination'>
         {% if paginator.previous_page %}
         {% if paginator.previous_page == 1 %}
-            <a class='p newer' href="/">« Newer</a>
+            <a class='p newer' href="{{site.url}}/">« Newer</a>
         {% else %}
-            <a class='p newer' href="/page{{paginator.previous_page}}">« Newer</a>
+            <a class='p newer' href="{{site.url}}/page{{paginator.previous_page}}">« Newer</a>
         {% endif %}
         {% else %}
             
         {% endif %}
 
         {% if paginator.next_page %}
-            <a class='p older' href="/page{{paginator.next_page}}">Older »</a>
+            <a class='p older' href="{{site.url}}/page{{paginator.next_page}}">Older »</a>
         {% else %}
             
         {% endif %}
